Bug 1693472 [Wayland] Always use direct drawing on KWin, r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D110427